--- a/getway/CMakelists.txt
+++ b/getway/CMakelists.txt
@@ -10,3 +10,4 @@ add_executable(${BIN} ${SRC})
 target_link_libraries(${BIN} -static -levent)
 target_link_libraries(${BIN} -static -levent_core)
 target_link_libraries(${BIN} -static -levent_extra)
+target_link_libraries(${BIN} -static -lzmq)
