--- a/getway/CMakeLists.txt
+++ b/getway/CMakeLists.txt
@@ -11,3 +11,4 @@ target_link_libraries(${BIN} -static -levent)
 target_link_libraries(${BIN} -static -levent_core)
 target_link_libraries(${BIN} -static -levent_extra)
 target_link_libraries(${BIN} -static -lzmq)
+target_link_libraries(${BIN} -lpthread)
