--- a/registersvr/CMakeLists.txt
+++ b/registersvr/CMakeLists.txt
@@ -8,3 +8,4 @@ add_definitions(-Wall
 -Wno-unused)
 add_executable(${BIN} ${SRC})
 target_link_libraries(${BIN} -static -lzmq)
+target_link_libraries(${BIN} -lpthread)
