--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 project(server)
 set(ROOTDIR ${PROJECT_SOURCE_DIR})
 message(${ROOTDIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOTDIR}/output)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOTDIR}/output)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ROOTDIR}/output)
 add_subdirectory(${ROOTDIR}/getway)
 add_subdirectory(${ROOTDIR}/registersvr)
