--- a/getway/CMakeLists.txt
+++ b/getway/CMakeLists.txt
@@ -12,3 +12,5 @@ target_link_libraries(${BIN} -levent_core)
 target_link_libraries(${BIN} -levent_extra)
 target_link_libraries(${BIN} -lzmq)
 target_link_libraries(${BIN} -lpthread)
+target_link_libraries(${BIN} -lprotobuf)
+target_link_libraries(${BIN} -lprotocol)
