--- a/libprotocol/libprotocol.vcxproj
+++ b/libprotocol/libprotocol.vcxproj
@@ -56,7 +56,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>protoc ./common.proto --cpp_out=./</Command>
+      <Command>protoc ./common.proto --cpp_out=./
+protoc ./register.proto --cpp_out=./</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -81,12 +82,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="common.proto" />
+    <None Include="register.proto" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.pb.h" />
+    <ClInclude Include="register.pb.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common.pb.cc" />
+    <ClCompile Include="register.pb.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
