--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOTDIR}/output)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOTDIR}/output)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ROOTDIR}/output)
 include_directories(${ROOTDIR}/libprotocol)
-message(CMAKE_LIBRARY_OUTPUT_DIRECTORY)
+message(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 link_directories(CMAKE_LIBRARY_OUTPUT_DIRECTORY)
 add_subdirectory(${ROOTDIR}/libprotocol)
 add_subdirectory(${ROOTDIR}/getway)
