--- a/libprotocol/CMakeLists.txt
+++ b/libprotocol/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(protocol)
 set(LIB protocol)
-execute_process(COMMAND protoc --proto_path=./ ./common.proto --cpp_out=./)
-execute_process(COMMAND protoc --proto_path=./ ./register.proto --cpp_out=./)
+set(CURDIR ${ROOTDIR}/libprotocol)
+execute_process(COMMAND protoc --proto_path=${CURDIR} ${CURDIR}/common.proto --cpp_out=${CURDIR})
+execute_process(COMMAND protoc --proto_path=${CURDIR} ${CURDIR}/register.proto --cpp_out=${CURDIR})
 aux_source_directory(. SRC)
 add_library(${LIB} ${SRC})
