--- a/libprotocol/CMakeLists.txt
+++ b/libprotocol/CMakeLists.txt
@@ -5,4 +5,10 @@ set(CURDIR ${ROOTDIR}/libprotocol)
 execute_process(COMMAND protoc --proto_path=${CURDIR} ${CURDIR}/common.proto --cpp_out=${CURDIR})
 execute_process(COMMAND protoc --proto_path=${CURDIR} ${CURDIR}/register.proto --cpp_out=${CURDIR})
 aux_source_directory(. SRC)
+
+if(MSVC)
+file(GLOB HFILES "*.h")
+add_library(${LIB} ${SRC} ${HFILES})
+else(MSVC)
 add_library(${LIB} ${SRC})
+endif(MSVC)
