--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ endif(MSVC)
 add_subdirectory(${ROOTDIR}/libprotocol)
 add_subdirectory(${ROOTDIR}/getway)
 add_subdirectory(${ROOTDIR}/registersvr)
+add_subdirectory(${ROOTDIR}/httpsvr)
