--- a/httpsvr/CMakeLists.txt
+++ b/httpsvr/CMakeLists.txt
@@ -22,5 +22,5 @@ target_link_libraries(${BIN} -levent_core)
 target_link_libraries(${BIN} -lpthread)
 target_link_libraries(${BIN} -lprotobuf)
 target_link_libraries(${BIN} -lprotocol)
-target_link_libraries(${BIN} -levent_extras)
+target_link_libraries(${BIN} -levent_extra)
 endif(MSVC)
